# clanlib-2.4

./: .gitignore  Examples-vc2010.sln  README.md  TODO  Tests-vc2010.sln  configure.ac
Documentation/: Makefile.am
Documentation/Overview/: Makefile.am
Documentation/Reference/: Makefile.am
Examples/Game/Roadgeddon/: Roadgeddon-vc2008.sln  Roadgeddon-vc2008.vcproj
Setup/Tests/: postgresql.cpp
Setup/pkgconfig/: clanPgsql.pc.in
Sources/: Makefile.am
Sources/API/: Makefile.am  core.h
Sources/API/Database/: db_reader.h  db_reader_provider.h
Sources/API/GL1/: opengl1_defines.h
Sources/API/Pgsql/: pgsql_connection.h
Sources/App/: Makefile.am
Sources/CSSLayout/: Makefile.am
Sources/Core/: Makefile.am
Sources/Database/: Makefile.am  db_reader.cpp
Sources/Display/: Makefile.am
Sources/GL/: Makefile.am  opengl_graphic_context_provider.cpp
Sources/GL1/: Makefile.am  gl1_graphic_context_provider.cpp
Sources/GUI/: Makefile.am
Sources/MikMod/: Makefile.am
Sources/Network/: Makefile.am
Sources/Pgsql/: Makefile.am  pg_type.h  pgsql_command_provider.cpp  pgsql_command_provider.h  pgsql_connection_provider.cpp  pgsql_connection_provider.h  pgsql_reader_provider.cpp  pgsql_reader_provider.h  pgsql_transaction_provider.cpp  pgsql_transaction_provider.h
Sources/RegExp/: Makefile.am
Sources/SWRender/: Makefile.am  software_program_standard.cpp  swr_display_window_provider.cpp
Sources/Sound/: Makefile.am
Sources/Sqlite/: Makefile.am  sqlite_reader_provider.cpp  sqlite_reader_provider.h
Sources/Vorbis/: Makefile.am
Tests/Core/Crypt/: test.h  (+2 more)
(+67 files in other folders)
